cleaning (#2221)